# tagbox

./: .env  .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  audit.toml  config.toml  debug_pdf.rs  justfile  test_edit_gui.rs
.cursor/rules/: tagbox.mdc  windows.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: arch_and_apis.md  cli-design.md  database.md  dev_guildes.md  gui-claude-plan.md  gui_design_guide.md  prd.md  任务规划.md
examples/: config_with_comments.toml  test.toml
scripts/: README.md  ci-build.sh  ci-nightly.sh  ci-quick-checks.sh  ci-test.sh  codex-init.sh  init-database.sql  init-db.ps1  init-db.sh  init_db.py  prepare-mac.sh  prepare.ps1  prepare.sh
tagbox-cli/: Cargo.toml
tagbox-cli/src/: cli.rs  main.rs
tagbox-cli/src/commands/: author.rs  config.rs  db.rs  edit.rs  export.rs  import.rs  init_config.rs  link.rs  list.rs  mod.rs  preview.rs  rebuild.rs  search.rs  serve.rs  stats.rs  stdio.rs
tagbox-cli/src/output/: json.rs  mod.rs  progress.rs  table.rs
tagbox-cli/src/utils/: config.rs  error.rs
tagbox-config/: Cargo.toml
tagbox-config/src/: main.rs
tagbox-core/: Cargo.toml  build.rs
tagbox-core/benches/: hash_benchmark.rs
tagbox-core/src/: authors.rs  config.rs  editor.rs  errors.rs  history.rs  importer.rs  lib.rs  link.rs  metainfo.rs  pathgen.rs  schema.rs  search.rs  system.rs  types.rs  utils.rs  validation.rs
tagbox-core/tests/: config_tests.rs  full_flow_tests.rs  metadata_extraction_tests.rs  option_tests.rs  parallel_import_tests.rs  pathgen_tests.rs  real_files_parallel_test.rs  serial_import_test.rs  simple_parallel_test.rs  test_schema.sql  utils_tests.rs
tagbox-freya/: Cargo.toml  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PLAN_PHASE2.md  INTEGRATION_PLAN.md  NEXT_STEPS.md  PHASE1_COMPLETED.md  QUICK_START.md  UI_IMPROVEMENTS.md  fix_buttons.sh
tagbox-freya/src/: app.rs  main.rs  router.rs
tagbox-freya/src/components/: advanced_search.rs  breadcrumb.rs  category_tree.rs  confirm_dialog.rs  custom_button.rs  drag_drop.rs  file_preview.rs  mod.rs  search_input.rs  status_bar.rs  toast.rs  top_bar.rs
tagbox-freya/src/pages/: edit.rs  import.rs  mod.rs  settings.rs
tagbox-freya/src/services/: mod.rs  tagbox_service.rs  tagbox_service_test.rs
tagbox-freya/src/state/: mod.rs
tagbox-freya/src/utils/: api.rs  clipboard.rs  download.rs  file_operations.rs  mod.rs  system_open.rs
tagbox-freya/tests/: integration_test.rs
tagbox-gui/: Cargo.toml
tagbox-gui/src/: app.rs  lib.rs  main.rs
tagbox-gui/src/components/: advanced_search.rs  category_manager.rs  category_tree.rs  category_tree_old.rs  drag_drop_area.rs  edit_dialog.rs  file_list.rs  file_list_old.rs  file_operations.rs  file_preview.rs  import_dialog.rs  log_viewer.rs  main_window.rs  main_window_old.rs  menu_bar.rs  mod.rs  search_bar.rs  settings_dialog.rs  statistics_dialog.rs  status_bar.rs
tagbox-gui/src/state/: app_state.rs  events.rs  mod.rs
tagbox-gui/src/themes/: default.rs  mod.rs  theme_manager.rs
tagbox-gui/src/utils/: async_bridge.rs  clipboard.rs  mod.rs  system_open.rs
tagbox-tools/: Cargo.toml  README.md
tagbox-tools/src/: init-db.rs  show-pdf-metainfo.rs
tagbox-tui/: Cargo.toml
tagbox-tui/src/: main.rs
test_load/: Cargo.toml
test_load/src/: main.rs
