[package]
name = "tagbox-core"
version = "0.1.0"
edition = "2021"
authors = ["Qi Deng<dengqi935@gmail.com>"]
description = "Core library for TagBox file management system"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = "1.9.5"
lazy_static = "1.4.0"

# Signal-FTS5 扩展依赖
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
signal-tokenizer = { git = "https://github.com/signalapp/Signal-FTS5-Extension.git", branch = "main" }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"