[package]
name = "tagbox-core"
version = "0.1.0"
edition = "2021"
authors = ["Qi Deng<dengqi935@gmail.com>"]
description = "Core library for TagBox file management system"

[dependencies]
blake2 = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = "1.11"
lazy_static = "1.5"
epub = "2.1"
pdf = "0.9"
imageinfo = "0.7"

# Signal-FTS5 扩展依赖
# libsqlite3-sys = { version = "0.26", features = ["bundled"] }
# signal-tokenizer = { git = "https://github.com/signalapp/Signal-FTS5-Extension.git", branch = "main" }

[dev-dependencies]
# 测试文件和临时目录
tempfile = { workspace = true }
tokio-test = { workspace = true }
# 断言库
pretty_assertions = { workspace = true }
assert_fs = { workspace = true }
# 模拟库
mockall = { workspace = true }
# wiremock = { workspace = true } # Disabled due to RUSTSEC-2024-0384
# 数据库测试
testcontainers = { workspace = true }
# 文件系统测试
proptest = { workspace = true }
proptest-derive = { workspace = true }
