[package]
name = "tagbox-core"
version = "0.1.0"
edition = "2021"
authors = ["Qi Deng<dengqi935@gmail.com>"]
description = "Core library for TagBox file management system"

[dependencies]
blake2 = { workspace = true }
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
md5 = "0.7"
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
libsqlite3-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = "1.11"
lazy_static = "1.5"
epub = "2.1"
pdf = "0.9"
imageinfo = "0.7"
num_cpus = "1.16"
futures = "0.3"
sea-query = "0.32.5"

# Signal-FTS5 扩展依赖
signal-tokenizer = { path = "../signal-fts5", features = ["extension"] }
# libsqlite3-sys = { version = "0.26", features = ["bundled"] }

[[bench]]
name = "hash_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
# 测试文件和临时目录
tempfile = { workspace = true }
tokio-test = { workspace = true }
# 断言库
pretty_assertions = { workspace = true }
assert_fs = { workspace = true }
# 模拟库
mockall = { workspace = true }
# wiremock = { workspace = true } # Disabled due to RUSTSEC-2024-0384
# 数据库测试
testcontainers = { workspace = true }
# 文件系统测试
proptest = { workspace = true }
proptest-derive = { workspace = true }
