[package]
name = "tagbox-freya"
version = "0.1.0"
authors = ["TagBox Contributors"]
edition = "2021"
description = "Freya-based GUI for TagBox file management system"
license = "MIT"

[dependencies]
freya = "0.3"
dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = false }
tokio = { version = "1", features = ["full"] }
tagbox-core = { path = "../tagbox-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = "0.4"
arboard = "3.4"  # 剪贴板支持

[dev-dependencies]
tempfile = "3.10"