[package]
name = "tagbox-freya"
version = "0.1.0"
authors = ["TagBox Contributors"]
edition = "2021"
description = "Freya-based GUI for TagBox file management system"
license = "MIT"

[dependencies]
freya = "0.3"
dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = false }
tokio = { version = "1", features = ["full"] }
tagbox-core = { path = "../tagbox-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = "0.4"
arboard = "3.4"  # 剪贴板支持
dirs = "5.0"
toml = "0.8"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
open = "5.0"  # 跨平台打开文件/文件夹
rfd = "0.14"  # 异步文件对话框
reqwest = { version = "0.12", features = ["json", "stream"] }  # HTTP 客户端
url = "2.5"  # URL 解析

[dev-dependencies]
tempfile = "3.10"
freya-testing = "0.3"